<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:background="@color/duck_egg_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextTextPersonName"
            app:layout_constraintStart_toStartOf="@id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="@id/editTextTextPersonName"
            android:src="@drawable/user"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/user_profile_picture"
            app:layout_constraintBottom_toBottomOf="@id/user_profile_picture"
            app:layout_constraintStart_toStartOf="@id/user_profile_picture"
            app:layout_constraintEnd_toEndOf="@id/user_profile_picture"
            android:text="@string/upload"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextTextEmailAddress"
            android:layout_marginHorizontal="30dp"
            android:autofillHints="@string/UserName"
            android:hint="@string/UserName"
            android:background="@drawable/white_rect_background"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="@id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="@id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName"
            app:layout_constraintBottom_toTopOf="@id/editTextTextPassword"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/Email"
            android:hint="@string/Email"
            android:background="@drawable/white_rect_background"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@id/editTextTextEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/renterPassword"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/Password"
            android:hint="@string/Password"
            android:background="@drawable/white_rect_background"/>
        <EditText
            android:id="@+id/renterPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@id/editTextTextEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"
            app:layout_constraintBottom_toTopOf="@+id/no_account_button"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/Password"
            android:hint="@string/renterPassword"
            android:background="@drawable/white_rect_background"
            android:visibility="gone"/>
        <Button
            android:id="@+id/no_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/renterPassword"
            app:layout_constraintStart_toStartOf="@id/editTextTextPassword"
            app:layout_constraintEnd_toEndOf="@id/editTextTextPassword"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            android:text="@string/don_t_have_an_account_register"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/no_account_button"
            app:layout_constraintStart_toStartOf="@id/no_account_button"
            app:layout_constraintEnd_toEndOf="@id/no_account_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/log_in"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"
            android:background="@drawable/white_rect_background"/>
        <Button
            android:id="@+id/back_to_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/login_button"
            app:layout_constraintBottom_toBottomOf="@id/login_button"
            android:text="@string/back_to_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"
            android:drawableStart="@drawable/back"
            android:drawablePadding="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>