<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/welcome_image"
            android:layout_width="295dp"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:src="@drawable/artwork"
            android:scaleType="fitXY"
            android:contentDescription="@string/welcome_image"/>

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_image"
            android:layout_marginTop="15dp"
            tools:text="welcome" />

        <TextView
            android:id="@+id/paragraph_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Lorem ipsum dolor sit amet, \nconsectetur adipiscing"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_tv"
            android:gravity="center"/>
        <Button
            android:id="@+id/get_started_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#35ccb1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paragraph_tv"
            android:layout_marginTop="20dp"
            android:background="@drawable/curved_button_background"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:fontFamily="@font/rubik_medium"
            android:minHeight="0dp"
            />
        <Button
            android:id="@+id/log_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:fontFamily="@font/rubik_medium"
            style="@style/Widget.AppCompat.Button.Borderless"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>