<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.VideoActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Toolbar
            android:id="@+id/video_activity_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/duck_egg_blue">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/lesson_number_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lesson_icon"
                    app:layout_constraintStart_toStartOf="@id/lesson_icon"
                    app:layout_constraintEnd_toEndOf="@id/lesson_icon"
                    android:layout_marginVertical="5dp"
                    android:text="@string/lesson_1"
                    android:background="@drawable/curved_button_background"
                    android:paddingVertical="0dp"/>
                <ImageView
                    android:id="@+id/ic_checked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/lesson_number_TV"
                    app:layout_constraintBottom_toBottomOf="@id/lesson_number_TV"
                    app:layout_constraintStart_toEndOf="@id/lesson_number_TV"
                    android:layout_marginStart="3dp"
                    android:src="@drawable/checked"
                    android:visibility="gone"/>
                <ImageView
                    android:id="@+id/lesson_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/lesson_number_TV"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/book_shelf_one"/>
            <TextView
                android:id="@+id/subject_name_TV_video_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_system"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/rubik_medium"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#1f314a"/>
                <com.carlosmuvi.segmentedprogressbar.SegmentedProgressBar
                    android:id="@+id/segmented_bar"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/subject_name_TV_video_activity"
                    app:layout_constraintStart_toStartOf="@id/subject_name_TV_video_activity"
                    app:layout_constraintEnd_toEndOf="@id/subject_name_TV_video_activity"
                    android:layout_marginTop="2dp"
                    app:segment_count="5"
                    app:gap_size="4dp"
                    app:fill_color="#22d0c4"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </Toolbar>
    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/Video_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/video_activity_tool_bar"
        app:layout_constraintStart_toStartOf="@id/video_activity_tool_bar"
        app:layout_constraintEnd_toEndOf="@id/video_activity_tool_bar"/>

    <TextView
        android:id="@+id/introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Video_view"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/introduction"
        android:textSize="20sp"
        android:fontFamily="@font/rubik"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/introduction_TV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/introduction"
        app:layout_constraintStart_toStartOf="@id/introduction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        android:text="@string/introduction"
        android:textSize="20sp"
        android:fontFamily="@font/rubik_light"
        android:layout_marginVertical="4dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>